[package]
name = "brutus"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Whittle <jonathan.m.whittle@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
lazy_static = "1.4.0"
